force-app/main/default/objects/Approval_Matrix__mdt/fields/Approving_Authority__c.field-meta.xml
<CustomField>
    <fullName>Approving_Authority__c</fullName>
    <label>Approving Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Credit Manager</fullName>
                <default>true</default>
                <label>National Credit Manager</label>
            </value>
            <value>
                <fullName>Credit Head</fullName>
            </value>
            <value>
                <fullName>Zonal Credit Manager</fullName>
            </value>
            <value>
                <fullName>Regional Credit Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>