force-app/main/default/objects/Approval_Matrix__mdt/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
                <default>true</default>
                <label>L1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>