force-app/main/default/objects/Approval_Matrix__mdt/fields/Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Range_Max__c</fullName>
    <label>Range Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>