force-app/main/default/objects/Approval_Matrix__mdt/fields/Range_Min__c.field-meta.xml
<CustomField>
    <fullName>Range_Min__c</fullName>
    <label>Range Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>