force-app/main/default/objects/Approval_Matrix__mdt/listViews/All_Approval_Matrices.listView-meta.xml
<ListView>
    <fullName>All_Approval_Matrices</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Approving_Authority__c</columns>
    <columns>Range_Min__c</columns>
    <columns>Range_Max__c</columns>
    <columns>LOB__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approval Matrices</label>
</ListView>